add forecst for 14 days and add higlight

--- a/weather-app/src/app/app.component.html
+++ b/weather-app/src/app/app.component.html
@@ -2,4 +2,25 @@
   [location]="location()"
   (locationChange)="changeLocation($event)"
   [currentLocation]="current"
+  [degree]="degree()"
 />
+
+<div class="main">
+  <app-header
+    [location]="location()"
+    [degree]="degree()"
+    (degreeChange)="changeDegree($event)"
+  />
+
+  @if (forecast.length > 0) {
+    <app-forecast
+      [forecast]="forecast"
+      [degree]="degree()"
+    />
+
+    <h2>Today Highlights</h2>
+
+    <app-highlights [current]="current"/>
+  }
+
+</div>
