--- a/weather-app/src/app/app.component.css
+++ b/weather-app/src/app/app.component.css
@@ -3,4 +3,11 @@
   width: 100%;
   height: 100%;
   background: #EBF4F6;
+  justify-content: space-between;
+  padding-bottom: 20px;
+}
+
+.main {
+  margin-left: 390px;
+  flex: 1;
 }
